tests/pos/simple/21-conditional-expression.ts

/*@  bar :: (f: () => posint) => posint */
export function bar(f) {
    return (typeof f === "function") ? f() : f;
}
