tests/neg/simple/21-conditional-expression.ts

/*@  bar :: (() => posint) => negint */
export function bar(f) {
  return (typeof f === "function") ? f() : f;
}
